hphp/hack/test/typecheck/tconst/access_abstract_tconst2.php.exp
File "access_abstract_tconst2.php", line 12, characters 7-7:
This object is of type C (Typing[4146])
File "access_abstract_tconst2.php", line 12, characters 17-17:
It is incompatible with this object of type P
because some declarations are incompatible.
Read the following to see why:
File "access_abstract_tconst2.php", line 9, characters 18-36:
Error while expanding the type constant this::TI::Tabstract:
File "access_abstract_tconst2.php", line 9, characters 28-36:
Cannot directly access the abstract type constant I::Tabstract
File "access_abstract_tconst2.php", line 4, characters 23-31:
I::Tabstract was declared abstract here
File "access_abstract_tconst2.php", line 9, characters 18-25:
We believe the type constant this::TI expands to an object of type I for the following reason:
File "access_abstract_tconst2.php", line 13, characters 19-19:
This is an object of type I
